force-app/main/default/objects/SKVObject1__c/SKVObject1__c.object-meta.xml
<CustomObject>
    <label>SKVObject1</label>
    <nameField>
        <label>SKVObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SKVObject1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>