force-app/main/default/objects/SKVObject1__c/fields/SKVField1__c.field-meta.xml
<CustomField>
    <fullName>SKVField1__c</fullName>
    <label>SKVField1</label>
    <type>Phone</type>
</CustomField>