force-app/main/default/objects/SKVObject1__c/fields/SKVField2__c.field-meta.xml
<CustomField>
    <fullName>SKVField2__c</fullName>
    <label>SKVField2</label>
    <type>Email</type>
</CustomField>