force-app/main/default/objects/SKVObject1__c/fields/SKVField3__c.field-meta.xml
<CustomField>
    <fullName>SKVField3__c</fullName>
    <label>SKVField3</label>
    <length>6</length>
    <type>Text</type>
</CustomField>